--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,30 +1,30 @@
 [tool.poetry]
-name = "BOLDswimsuite"
+name = "boldswimsuite"
 version = "0.1.0"
-description = "Simulation of BOLD fMRI"
-authors = ["jacobchausse <jacob.chausse@gmail.com>"]
+description = ""
+authors = ["Jacob Chausse <jchausse@uwaterloo.ca>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "~3.10"
-numpy = "^1.23.3"
-numba = "^0.56.2"
-scipy = "^1.9.1"
-tqdm = "^4.64.1"
-pathos = "^0.2.9"
-vtk = "9.2.6"
-mayavi = "^4.8.1"
-matplotlib = "^3.6.0"
-pyside2 = "^5.15.2.1"
+python = ">=3.10,<3.11"
+numpy = "^1.19"
+numba = "^0.60.0"
+scipy = "^1.14.1"
+tqdm = "^4.67.0"
+pathos = "^0.3.3"
 
-[tool.poetry.group.analysis]
-optional = true
+ipykernel = { version = "^6.22.0", optional = true }
+jupyter = { version = "^1.0.0", optional = true }
+mayavi = { version = "^4.8.1", optional = true }
+matplotlib = { version = "^3.6.0", optional = true }
+vtk = { version = "9.3", optional = true }
 
-[tool.poetry.group.analysis.dependencies]
-SciencePlots = "^2.0.1"
-ipykernel = "^6.22.0"
-pandas = "^2.0.3"
-jupyter = "^1.0.0"
+PyQt5 = { version = "^5.15.11", optional = true }
+configobj = { version="^5.0.9", optional = true}
+
+[tool.poetry.extras]
+lessons = ["ipykernel", "jupyter"]
+display = ["vtk", "mayavi", "matplolib", "PyQt5", "configobj"]
 
 [build-system]
 requires = ["poetry-core"]
